# UAP_BURUNG

./: .gitignore  README.md  app_2model.py  pyproject.toml  requirements.txt
src/code/: Script.ipynb  UAP_BURUNG_SMALL_MOBILENETv2.ipynb  UAP_BURUNG_SMALL_ResNet50.ipynb
